# SpaceMissionSimulator

./: .gitignore  CONSTRAINT_IMPLEMENTATION_SUMMARY.md  DEBRIS_IMPACT_SCENARIO_CRITIQUE.docx  DEFECTS.md  EO_Mission_Simulator_Architecture.docx  FDIR_ENHANCEMENTS.md  FDIR_IMPLEMENTATION_SUMMARY.txt  FDIR_QUICK_REFERENCE.md  FUNCTIONALITY_AUDIT_2026-06.md  IMPLEMENTATION_SUMMARY.md  INSTRUCTOR_AUDIT_SUMMARY.txt  REMEDIATION_PLAN.md  SEPARATION_SCENARIO.md  SPACECDF_RECONCILE.md  aerospace-finalyear-space-uk.skill  aerospace-phd-space-uk.skill  aerospace-year1-uk.skill  aerospace-year2-uk.skill  fix_vendor_symlinks.sh  pyproject.toml  r24.txt  r27.txt  start.sh  systems-engineering.skill
defects/: 01-obdh-hk-tm-buffer-fill-overflow.md  02-hk-store-undersized.md  03-tm-storage-active-in-bootloader.md  04-aocs-mode-default-nominal.md  05-sw-image-phase-not-in-hk.md  06-mcs-no-parameter-watch-widget.md  07-circular-store-fill-pct-ui-contract.md  09-scenario-engine-never-instantiated.md  10-breakpoint-save-load-not-wired-to-ui.md  11-heater-control-broken-and-unreachable.md  12-clear-all-failures-button-noop.md  13-mcs-advanced-displays-unreachable.md  14-mcs-procedure-builder-produces-unrunnable-procedures.md  15-planner-full-validation-unreachable.md  16-planner-endpoints-with-no-ui.md  17-common-orphaned-pus-service-parser.md  18-rfsim-gnuradio-package-dead.md  19-rfsim-radio-dashboard-placeholder-panels.md  20-mcs-dead-and-unwired-code-cleanup.md  21-planner-common-dead-and-orphaned-code.md  22-rfsim-gateway-tools-dead-code.md  23-subsystem-events-never-reach-operator.md  (+22 more)
(+400 files in other folders)
